style.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}
.main{
    width: 100vw;
    height: 100vh;
    font-family: verdana;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.main h1{
    margin-bottom: 20px;
}
.container{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    height: 600px;
    width: 600px;
}
.navigation{
    width: 45%;
    margin-top: 20px;
    display: flex;
    align-items: center;
    justify-content: space-around;
}
.nav-button{
    width: 100px;
    height: 30px;
    cursor: pointer;
}
.buttons{
    outline: none;
    border: none;
    border-radius: 20px;
    
}
.container{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap ;
}
.box{
    border: 1px solid rgba(0, 0, 0, 0.241);
}
/* .box:hover{
    background-color: rgba(0, 0, 0, 0.075);
} */
.dialog{
    padding: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
.heading{
    font-size: 24px;  
}
.slider{
    accent-color: #028052;
    width: 400px;
    
}
.slider-parent{
    display: flex;
    align-items: center;

}
.slide{
    font-size: 18px;
    padding: 10px;
    
}
.value{
    border-radius: 20px;
    width: 70px;
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    margin-top: 10px;
    padding: 20px;
    background-color: #028052;
    color: white;
}
dialog {
    /*used to center this dialog */
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    position: absolute;
    /*#############*/

    border: none;
    border-radius: 10px;
    width: 500px;
}
#close{
    width: 100px;
    height: 20px;
    border: none;
    outline: none;
    background-color: #028052;
    border-radius: 20px;
    color: white;
    font-size: 18px;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}
.eraser{
    cursor: url('/img/eraser.png'),auto;
}

